Fix bug, refactoring js Fixed a bug where the page would reload the active subscriptions before adding a new active subscriptions, resulting in not showing the new subscription

--- a/finance/static/finance/styles.scss
+++ b/finance/static/finance/styles.scss
@@ -1,7 +1,25 @@
-* {
+body {
   margin: 5px;
   // padding: 5px;
 }
+
+div.subs-container { 
+  margin:5px; 
+  padding:5px; 
+  background-color: green; 
+  width: 100%; 
+  height: 30vh; 
+  overflow: auto; 
+  text-align:justify; 
+  .subs {
+    height: 100px;
+    background-color: tomato;
+    margin: 0px 0px 5px 0px;
+    padding: 20px;
+    width: 100%;
+  }
+} 
+
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
